# mollen-wow

./: CMakeLists.txt  README.md  main.cpp
core/: CMakeLists.txt
core/expansions/: CMakeLists.txt
core/expansions/wrath/: CMakeLists.txt
core/expansions/wrath/include/: object_guid.hpp  object_mgr.hpp  object_type.hpp
core/expansions/wrath/src/: CMakeLists.txt  object_mgr.cpp
datastore/: CMakeLists.txt
datastore/include/: cdatastore.hpp
datastore/src/: cdatastore.cpp
memory/: CMakeLists.txt
memory/include/: mollen_alloc.h
memory/src/: mollen_alloc.cpp
utils/hooks/: hook.cpp  hook.hpp
